stop the footer covering up app content

--- a/src/civicboom/public/styles/web/layout.css
+++ b/src/civicboom/public/styles/web/layout.css
@@ -166,6 +166,7 @@ HEADER .menuh INPUT {
 BODY>DIV#app {
 	clear: both;
 	z-index: 0;
+	margin-bottom: 2em;
 }
 .u-anon #app {margin-top: 122px;}
 .u-user #app {margin-top: 139px;}
